# us-datacentres-energy-modelling

./: .flake8  .gitignore  README.md  TODOs.md  calculate_energy.py  pyproject.toml  requirements.txt  streamlit_dashboard.py  streamlit_dashboard_v2.py
.devcontainer/: devcontainer.json
GNESTE_assumptions/: GNESTE_Solar_Power.csv
docs/: method_and_assumptions.md
generate_hex_cell_data/: generate_data.py  wind_and_pv_data.py
hex_cell_outputs/: all_hex_mean_wind_and_PV_GTI.geojson  states_hex_lookup.json
inputs/GNESTE_assumptions/: GNESTE_Battery_Storage.csv  GNESTE_Gas_Power.csv  GNESTE_Wind_Power.csv  README.md
inputs/weather_file/: 726234_41.65_-95.74_tmy-2024.csv  data_source.txt
src/: streamlit_dashboard.py
src/energy_model/: calculate_energy.py  pv_model.py
src/generate_hex_cell_data/: generate_data.py
